fix: improve sidebar icon and text visibility on hover and active states

--- a/_sass/layout/_sidebar.scss
+++ b/_sass/layout/_sidebar.scss
@@ -144,27 +144,43 @@ $sidebar-display: 'sidebar-display'; /* the attribute for sidebar display */
 
         &:hover {
           background-color: var(--sidebar-hover-bg);
+          span {
+            opacity: 1;
+            color: rgba(241, 241, 241, 0.99);
+          }
+          i {
+            opacity: 1;
+            color: rgba(241, 241, 241, 0.99);
+          }
         }
 
         i {
           font-size: 95%;
-          opacity: 0.8;
+          opacity: 1;
+          color: rgba(222, 222, 222, 0.99);
           margin-right: 1.5rem;
         }
 
         span {
           font-size: 90%;
           letter-spacing: 0.2px;
+          opacity: 1;
+          color: rgba(222, 222, 222, 0.99);
         }
       }
 
       &.active {
         .nav-link {
-          color: var(--sidebar-active-color);
+          color: rgba(255, 255, 255, 0.99);
           background-color: var(--sidebar-hover-bg);
 
           span {
             opacity: 1;
+            color: rgba(255, 255, 255, 0.99);
+          }
+          i {
+            opacity: 1;
+            color: rgba(255, 255, 255, 0.99);
           }
         }
       }
